# geomatch

./: .gitignore  README.md  vercel.json
.github/workflows/: etl.yml
data/presets/: industries.json
etl/: pipeline.py  pyproject.toml
etl/features/: __init__.py  transforms.py
etl/sources/: __init__.py  acs.py  base.py  bea.py  laus.py  zillow.py
scripts/: generate_test_dataset.py  synthetic_biased_geo_test_truth.txt
web/: next.config.ts  package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/analyze/: page.tsx
web/app/methodology/: page.tsx
web/components/: AnalysisResults.tsx  AnalyzerShell.tsx  CsvUpload.tsx  HelpPanel.tsx  IndustryPicker.tsx  MatcherShell.tsx  Nav.tsx  ResultsTable.tsx  TargetPicker.tsx  WeightSliders.tsx
web/lib/: analyze.ts  csv.ts  data.ts  dr.ts  duckdb.ts  linalg.ts  match.ts  presets.ts  propensity.ts  regression.ts
web/public/data/: feature_matrix.parquet  geo_metadata.json  manifest.json
web/public/sample/: synthetic_biased_geo_test.csv  synthetic_biased_geo_test_truth.txt
